--- a/Vass_2/icon_panel.ui
+++ b/Vass_2/icon_panel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>150</height>
+    <width>500</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QPushButton" name="addShortCut">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>50</y>
-     <width>100</width>
+     <x>110</x>
+     <y>110</y>
+     <width>91</width>
      <height>50</height>
     </rect>
    </property>
@@ -32,14 +32,14 @@
   <widget class="QPushButton" name="app_1">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>1</y>
-     <width>100</width>
-     <height>50</height>
+     <x>30</x>
+     <y>0</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -47,18 +47,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_2">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>220</x>
      <y>0</y>
-     <width>100</width>
-     <height>50</height>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -66,18 +69,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_3">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>320</x>
      <y>0</y>
-     <width>100</width>
-     <height>50</height>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -85,18 +91,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_4">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>50</y>
-     <width>100</width>
-     <height>50</height>
+     <x>30</x>
+     <y>90</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -104,18 +113,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_5">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>50</y>
-     <width>100</width>
-     <height>50</height>
+     <x>320</x>
+     <y>90</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -123,18 +135,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_6">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>100</y>
-     <width>100</width>
-     <height>50</height>
+     <x>30</x>
+     <y>180</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -142,18 +157,21 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_7">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>100</y>
-     <width>100</width>
-     <height>50</height>
+     <x>220</x>
+     <y>180</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
@@ -161,27 +179,180 @@ QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 
    <property name="text">
     <string>PushButton</string>
    </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
   </widget>
   <widget class="QPushButton" name="app_8">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>100</y>
-     <width>100</width>
-     <height>50</height>
+     <x>320</x>
+     <y>180</y>
+     <width>80</width>
+     <height>90</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px } 
+    <string notr="true">QPushButton { background-color: rgb(215, 215, 215); border: 1px solid gray;border-radius:10px ; padding-top:40px} 
 
 QPushButton:hover{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(115, 175, 215), stop: 1 rgb(175, 175, 215)); }
 QPushButton:pressed{ background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #BEBEBE, stop: 1 #D7D7D7); }</string>
    </property>
    <property name="text">
     <string>PushButton</string>
+   </property>
+   <attribute name="buttonGroup">
+    <string notr="true">application_buttons</string>
+   </attribute>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>10</y>
+     <width>51</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>0</y>
+     <width>61</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>180</y>
+     <width>61</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>180</y>
+     <width>51</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>180</y>
+     <width>61</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>90</y>
+     <width>61</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>39</x>
+     <y>90</y>
+     <width>61</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_1">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>0</y>
+     <width>61</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="removeShortCut">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>110</y>
+     <width>91</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton { background-color: rgb(247, 95, 81); color: white; border: 1px solid gray; border-radius:10px} QPushButton:pressed { background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #FF7832, stop: 1 #FF9739); }</string>
+   </property>
+   <property name="text">
+    <string>Remove</string>
    </property>
   </widget>
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="application_buttons"/>
+ </buttongroups>
 </ui>
