--- a/Vass_2/resources.qrc
+++ b/Vass_2/resources.qrc
@@ -1,5 +1,11 @@
 <RCC>
     <qresource prefix="/">
         <file>icon2.ico</file>
+        <file>images/picture.png</file>
+        <file>images/philosophy.png</file>
+        <file>images/music.png</file>
+        <file>images/explorer.png</file>
+        <file>images/engineering.png</file>
+        <file>images/art.png</file>
     </qresource>
 </RCC>
