executable shell files , template of config

--- a/Vass_2/config.ui
+++ b/Vass_2/config.ui
@@ -45,28 +45,12 @@
     <string>Music player</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="lib_config">
-   <property name="geometry">
-    <rect>
-     <x>450</x>
-     <y>0</y>
-     <width>150</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{text-align:top;padding-top:10px;border:1px solid lightgrey;background-color:white;border-radius:10px ;color:lightgery}</string>
-   </property>
-   <property name="text">
-    <string>Library</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="ic_config">
    <property name="geometry">
     <rect>
      <x>269</x>
      <y>0</y>
-     <width>181</width>
+     <width>191</width>
      <height>50</height>
     </rect>
    </property>
@@ -77,7 +61,7 @@
     <string>Quick panel settings</string>
    </property>
   </widget>
-  <widget class="QLabel" name="Layout">
+  <widget class="QLabel" name="MainLayout">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -93,8 +77,160 @@
     <string notr="true">QLabel{background-color:white;}</string>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string/>
    </property>
+  </widget>
+  <widget class="QWidget" name="MainSettings" native="true">
+   <property name="geometry">
+    <rect>
+     <x>33</x>
+     <y>130</y>
+     <width>551</width>
+     <height>351</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="Main_settins">
+    <item row="2" column="1">
+     <widget class="QCheckBox" name="checkBox_3">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit_5"/>
+    </item>
+    <item row="0" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit"/>
+    </item>
+    <item row="5" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit_6"/>
+    </item>
+    <item row="2" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit_3"/>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>Notes</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit_4"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Clock</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QKeySequenceEdit" name="keySequenceEdit_2"/>
+    </item>
+    <item row="4" column="1">
+     <widget class="QCheckBox" name="checkBox_5">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Book shelf</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Quick panel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QCheckBox" name="checkBox_6">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QCheckBox" name="checkBox_2">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Painter</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Music player                                            </string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QCheckBox" name="checkBox_4">
+      <property name="text">
+       <string>On/off</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="Music_Player_settings" native="true">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>130</y>
+     <width>551</width>
+     <height>351</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="MP_settings">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>Music Player settings</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="Quick_Panel_settings" native="true">
+   <property name="geometry">
+    <rect>
+     <x>29</x>
+     <y>130</y>
+     <width>551</width>
+     <height>351</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="Quick_panel_sett">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_8">
+      <property name="text">
+       <string>Quick panel settings</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
