--- a/Vass_2/mainwindow.ui
+++ b/Vass_2/mainwindow.ui
@@ -66,8 +66,8 @@
    <widget class="TimeWidget" name="TimeLabel">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>200</y>
+      <x>360</x>
+      <y>230</y>
       <width>161</width>
       <height>31</height>
      </rect>
@@ -97,7 +97,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Open Time Widget</string>
+     <string>Hide</string>
     </property>
    </widget>
   </widget>
