--- a/Vass_2/media_player.ui
+++ b/Vass_2/media_player.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Media_Player</class>
  <widget class="QWidget" name="Media_Player">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -177,7 +180,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="ShuffleButton">
+      <widget class="QPushButton" name="RepeatButton">
        <property name="font">
         <font>
          <family>Rubik</family>
@@ -185,14 +188,14 @@
         </font>
        </property>
        <property name="text">
-        <string>Shuffle</string>
+        <string>Mode: Repeat All</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QSlider" name="VolumeSlider">
        <property name="value">
-        <number>50</number>
+        <number>10</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
